# ha-config-mcp

./: .gitignore  CLAUDE.md  README.md  flake.nix  lefthook.yml  pyproject.toml
.github/workflows/: pypi-publish.yaml
ha_config_mcp/: cli.py  ha.py  server.py
